crates/reinhardt-pages/tests/ui/style/fail/accessor_collision.stderr
error: multiple classes generate accessor `foo_bar`; rename one class so every generated method is unique
 --> tests/ui/style/fail/accessor_collision.rs:8:3
  |
8 |     .foo_bar {
  |      ^^^^^^^

error: first generated by class `.foo-bar`
 --> tests/ui/style/fail/accessor_collision.rs:5:3
  |
5 |     .foo-bar {
  |      ^^^

error: also generated by class `.foo_bar`
 --> tests/ui/style/fail/accessor_collision.rs:8:3
  |
8 |     .foo_bar {
  |      ^^^^^^^
